<resources>
    <string name="app_name">Statement</string>
    <string name="explore">Explore</string>
    <string name="news_stand">News Stand</string>
    <string name="content_image_description">Content Image</string>
    <string name="error_invalid_url">The url is not valid.</string>
    <string name="read_more">Read More</string>
    <string name="sources">Sources</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="sort">Sort</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="uh_oh_internet_not_available">Uh oh! Internet not available.</string>
    <string name="retry_soon">Retry soon</string>
    <string name="uh_oh_sources_not_available_now">Uh oh! Sources not available now.</string>

</resources>