<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <ImageView
        android:id="@+id/iv_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_image_description"
        android:minWidth="@dimen/iv_no_data_empty_min_width"
        android:src="@drawable/ic_empty_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_headline_no_data"
        style="@style/TvHeadline"
        android:layout_margin="@dimen/tv_headline_empty_margin"
        android:gravity="center_horizontal"
        android:text="@string/uh_oh_sources_not_available_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_no_data"
        tools:text="Uh oh! Sources not available now." />

    <TextView
        android:id="@+id/tv_content_no_data"
        style="@style/TvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry_soon"
        app:layout_constraintEnd_toEndOf="@+id/tv_headline_no_data"
        app:layout_constraintStart_toStartOf="@+id/tv_headline_no_data"
        app:layout_constraintTop_toBottomOf="@+id/tv_headline_no_data"
        tools:text="Retry soon" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_empty_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="iv_no_data, tv_headline_no_data, tv_content_no_data" />
</merge>